dovecot/dovecot-pigeonhole/tests/execute/errors/conflict-reject-fileinto.sieve
require "reject";
require "fileinto";

reject "No nonsense in my mailbox.";
fileinto "Spam";
